--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -2,13 +2,13 @@
   "language-es": "Español",
   "language-en": "English",
   "language-ru": "Русский",
-  "select-empty-option": "--- Select ---",
-  "new-game": "New Game",
-  "loading": "Loading....",
-  "nickname": "Player nickname",
-  "nickname-holder": "Your nickname",
+  "select-empty-option": "--- Выбрать ---",
+  "new-game": "Новая игра",
+  "loading": "Загрузка....",
+  "nickname": "Имя игрока",
+  "nickname-holder": "Ваше имя",
   "made-by": "Made with ❤️ by ",
-  "rules": "Rules",
+  "rules": "Правила",
   "rules-modal": {
     "title": "UNO - How to play",
     "special-rules": "Personalized House Rules",
