--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,6 +1,7 @@
 {
   "language-es": "Español",
   "language-en": "English",
+  "language-ru": "Русский",
   "select-empty-option": "--- Selecciona ---",
   "new-game": "Juego Nuevo",
   "loading": "Cargando la página....",
